[gd_scene load_steps=6 format=3 uid="uid://b8o8vvltx3i40"]

[ext_resource type="Script" path="res://main.gd" id="1_4p35e"]
[ext_resource type="PackedScene" uid="uid://660vh2gfx08v" path="res://mob.tscn" id="2_620w7"]
[ext_resource type="PackedScene" uid="uid://d26qrmljb5egs" path="res://Player.tscn" id="3_2w147"]
[ext_resource type="PackedScene" uid="uid://dmkslxpwdq6fb" path="res://hud.tscn" id="4_jvrk6"]

[sub_resource type="Curve2D" id="Curve2D_f6pom"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_4p35e")
mob_scene = ExtResource("2_620w7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266575, 0.266575, 0.266575, 1)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_f6pom")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" parent="." instance=ExtResource("3_2w147")]
position = Vector2(-80, 0)

[node name="HUD" parent="." instance=ExtResource("4_jvrk6")]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 360)

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
